--- a/page4.html
+++ b/page4.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="webpage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="page1.html">Timeline</a></li>
                 <li><a href="page2.html">Data Analysis</a></li>
                 <li><a href="page3.html">Narrative</a></li>
