--- a/page3.html
+++ b/page3.html
@@ -12,11 +12,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="page1.html">Page 1</a></li>
-                <li><a href="page2.html">Page 2</a></li>
-                <li><a href="page3.html">Page 3</a></li>
-                <li><a href="page4.html">Page 4</a></li>
-                <li><a href="data-analysis.html">Data Analysis</a></li> <!-- New page link -->
+                <li><a href="page1.html">Timeline</a></li>
+                <li><a href="page2.html">Narrative</a></li>
+                <li><a href="page3.html">Data Analysis</a></li>
+                <li><a href="page4.html">Contributors</a></li>
             </ul>
         </nav>
     </header>
